syntax = "proto3";

package user;

option go_package = "../proto";


message User {
  int32 ID = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
  string provider = 5;
  string provider_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message RegisterPayload {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message RegisterRequest {
  RegisterPayload payload = 1;
}

message LoginPayload {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  LoginPayload payload = 1;
}

message RefreshTokenPayload {
  string refresh_token = 1;
}

message RefreshTokenRequest {
  RefreshTokenPayload payload = 1;
}

message EmptyRequest{}

message EmptyResponse{}

message TokenResponse {
  string message = 1;
  string token = 2;
  string expired_at = 3;
  string refresh_token = 4;
  string refresh_token_expired_at = 5;
  string role = 6;
}

message GetUserRequest {
  int64 user_id = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns (EmptyResponse);
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
  rpc GetUserByID(GetUserRequest) returns (User);
  rpc GoogleOauth(EmptyRequest) returns (TokenResponse);
  rpc FacebookOauth(EmptyRequest) returns (TokenResponse);
  rpc GithubOauth(EmptyRequest) returns (TokenResponse);
}
